# SiliconBase-V5

./: .gitattributes  .gitignore  LICENSE  README.md  README_EN.md  REFACTOR_PLAN_V2.md  setup.py  一键部署启动.bat
SiliconBase_V5/: .dockerignore  .env.example  .gitignore  123.py  AGENTS.md  Dockerfile  Dockerfile.api  OPTIMIZATION_ANALYSIS.md  PROJECT_TREE.txt  PYTHON_ENV.md  _async_migration.py  _fix_test_session_calls.py  _migrate_session_calls.py  _rewrite_session_manager.py  _tmp_rewrite_session_integration.py  ai_client.py  cleanup_ui_element_vector.py  cli.py  docker-compose.override.yml  docker-compose.redis.yml  docker-compose.yml  export_yolo.py  generate_audit_report.py  install.bat  install.sh  logo.txt  main.py.README  pip.bat  protocol.py  pyproject.toml  pytest.ini  redis.conf  requirements-core.txt  requirements-core.txt.tmp  requirements-dev.txt  requirements-full.txt  requirements-ml.txt  requirements-ocr.txt  requirements-vision.txt  requirements-voice.txt  (+13 more)
SiliconBase_V5/api/: __init__.py  advanced_models_api.py  agent_api.py  ai_config_api.py  auth_utils.py  auto_trading_api.py  cloud_api.py  cloud_tool_repo.py  config.py  config_api.py  consciousness_api.py  cost_api.py  dependencies.py  exchange_config_api.py  experience_api.py  features_api.py  gamification_api.py  global_view_api.py  memory_api.py  memory_sync_websocket.py  metrics_api.py  middleware.py  monitoring.py  prompt_api.py  prompt_layer_api.py  prompt_variant_api.py  realtime_intervention_api.py  reflection_api.py  requirements.txt  run.py  schemas.py  session_api.py  silicon_life_api.py  stats_api.py  sync_api.py  task_api.py  template_experiment_api.py  three_views_api.py  tone_api.py  tool_market_api.py  (+8 more)
SiliconBase_V5/api/routes/: rlhf.py  weak_connection.py
SiliconBase_V5/assets/: __init__.py
SiliconBase_V5/cloud/: adapters.py
SiliconBase_V5/config/: deduplication.yaml  global.yaml  information_delivery.yaml  local.yaml  mcp_servers.yaml  model_upgrade.yaml  risk_map.yaml  roles.yaml  roles.yaml.bak.20260609182359  subagents.yaml  system.json  system_ports.py
SiliconBase_V5/config/providers/: anthropic.yaml  deepseek.yaml  ollama.yaml  openai.yaml
SiliconBase_V5/core/: Consciousness.py  __init__.py  ai_adapter.py  base_tool.py  config.py  config_unified.py  constants.py  diagnostic.py  enhancement_fallback.py  error_codes.py  exceptions.py  feature_manager.py  global_state.py  interfaces.py  logger.py  permission_utils.py  plate_registry.py  protocol.py  realtime_sync.py  redis_backend.py  resource_coordinator.py  subscription_manager.py  template_experiment.py  tool_manager.py  traceability.py  vector_index_optimizer.py  work_mode_manager.py
SiliconBase_V5/core/adapter/: __init__.py  agent_loop_adapter.py  consciousness_adapter.py  evolution_adapter.py  example_usage.py
SiliconBase_V5/core/agent/: __init__.py  agent_loop.py  agent_loop_hooks.py  agent_runtime.py  async_tool_gateway.py  checkpoint_manager.py  loop_types.py  (+21 more)
SiliconBase_V5/docs/: memory_system_architecture.mmd
SiliconBase_V5/frontend/: .env.example  .eslintrc.cjs  Dockerfile  index.html  nginx.conf  start.bat  tailwind.config.js  tsconfig.json  vite.config.ts
SiliconBase_V5/plugins/: example_plugin.py
SiliconBase_V5/redis/: redis.conf
SiliconBase_V5/rust_core/: Cargo.toml  pyproject.toml
SiliconBase_V5/scripts/: create_session_tables.sql  create_tables.py  deploy.sh  deploy_experience_tracking.sql  docker-entrypoint.sh  docker-quickstart.sh  execute_create_session_tables.py  init_cost_tables.py  init_database.py  init_mcp_subagent.py  init_model_bus.py  init_postgres.py  memory_db_optimization.sql  service_manager.py  siliconbase_service.py  start_all.py  start_postgres.py  start_services.py
SiliconBase_V5/sensors/: __init__.py
SiliconBase_V5/tools/: TOOLS_INVENTORY.json  __init__.py  app_search.py  apply_pixel_capture_fix.py  browse_dir.py  call_user.py  click_text.py  clipboard.py  clipboard_core.py  code_generate.py  current_time.py  delete_user_data.py  export_data.py  file_manager.py  find_file.py  find_screen_element.py  get_perception.py  keyboard_input.py  launch_app.py  launch_app_simple.py  launch_app_v2.py  list_installed_apps.py  long_task_tools.py  manage_admin.py  memory_add.py  memory_delete.py  memory_list.py  memory_replace.py  memory_search.py  memory_update.py  migrate_software_info_id.py  mouse_click.py  ocr_text.py  open_and_focus.py  pixel_capture.py  pixel_click.py  pixel_color.py  pixel_monitor.py  process_kill.py  process_start.py  (+31 more)
SiliconBase_V5/typings/: siliconbase_core.pyi
SiliconBase_V5/ui/: confirm_dialog.py
SiliconBase_V5/voice/: __init__.py  interface.py  model_bus_adapter.py  protected_speak_queue.py  state_sync.py  voice_assistant.py  voice_interface_modelbus.py  voice_prompts.py  wake_word_handler.py
(+1219 files in other folders)
