[package]
name = "siliconbase_core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "siliconbase_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.29.0"
uuid = { version = "1", features = ["v4"] }
